# xopen

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini  tox.toml  xopen.py
.github/workflows/: ci.yml
src/xopen/: __init__.py  _version.pyi
tests/: conftest.py  file.txt.bz2  file.txt.bz2.test  file.txt.gz.test  file.txt.lz4  file.txt.test  file.txt.xz.test  file.txt.zst  only_zeroes.zst  test_piped.py  test_xopen.py  testxopen.py
