[metadata]
name = xopen
author = Marcel Martin et al.
author_email = mail@marcelm.net
url = https://github.com/pycompression/xopen/
description = Open compressed files transparently
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:
install_requires =
    isal>=0.9.0; platform.python_implementation == 'CPython' and (platform.machine == "x86_64" or platform.machine == "AMD64")

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
dev = pytest
